emfas-site/src/components/accordion.css
.wrapper{
    display:inline-block;
    height: 100vh;
    width: 100 vw;
    justify-content: start;
    align-items: end;
    margin-top: 200px;
    padding-left: 60px;
}

.accordion {
    width: 500px;
}


.item{
    
    background:#bec0d8;
    margin-bottom: 5px;
    padding: 10px 20px;
    cursor: pointer;
    
}


.title{
    color:#1B1E62;
    display:flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    font-size: 12px;

}

.content{
    color: black;
    max-height: 0;
    overflow: hidden;
    transition: all 0.5s cubic-bezier(0,1,0,1);
}

.content.show{
    height: auto;
    max-height: 9999px;
    transition: all 0.5s cubic-bezier(1,0,1,0);
}

